--- a/android/app/src/main/res/layout/fragment_record_qna_detail.xml
+++ b/android/app/src/main/res/layout/fragment_record_qna_detail.xml
@@ -90,6 +90,17 @@
         app:layout_constraintTop_toBottomOf="@id/qnaDetailDivider"
         tools:listitem="@layout/qna_profile_item" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/comment_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:nestedScrollingEnabled="false"
+        android:overScrollMode="never"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/member_recycler_view"
+        tools:listitem="@layout/qna_comment_item" />
+
 
 
 
