--- a/android/app/src/main/res/layout/dialog_add_calendar.xml
+++ b/android/app/src/main/res/layout/dialog_add_calendar.xml
@@ -30,11 +30,11 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:text="시작 날짜" />
-                <com.google.android.material.floatingactionbutton.FloatingActionButton
-                    android:id="@+id/calendar_start_btn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_baseline_calendar_month_24" />
+                <ImageButton
+                android:id="@+id/calendar_start_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_baseline_calendar_month_24" />
 
                 <TextView
                     android:id="@+id/textView_startDate"
