--- a/android/app/src/main/res/layout/fragment_calendar.xml
+++ b/android/app/src/main/res/layout/fragment_calendar.xml
@@ -40,6 +40,8 @@
         android:layout_gravity="bottom|right"
         app:srcCompat="@drawable/ic_baseline_add_24"
         app:tint="@color/white"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="20dp"
         tools:ignore="MissingConstraints" />
 
 
