--- a/android/app/src/main/res/layout/fragment_calendar.xml
+++ b/android/app/src/main/res/layout/fragment_calendar.xml
@@ -5,9 +5,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".CalendarFragment">
+    tools:context=".CalendarFragment"
+    tools:ignore="MissingClass">
 
     <CalendarView
         android:id="@+id/calendarView"
@@ -40,8 +41,10 @@
         android:layout_gravity="bottom|right"
         app:srcCompat="@drawable/ic_baseline_add_24"
         app:tint="@color/white"
-        android:layout_marginRight="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="20dp"
+        android:layout_marginRight="16dp"
         tools:ignore="MissingConstraints" />
 
 
