--- a/android/app/src/main/res/layout/calendar_item.xml
+++ b/android/app/src/main/res/layout/calendar_item.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-<com.google.android.material.card.MaterialCardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_marginStart="10dp"
+    android:layout_marginEnd="10dp"
     app:cardBackgroundColor="@android:color/white"
     app:cardCornerRadius="0dp"
-    app:cardElevation="0dp"
-    >
+    app:cardElevation="0dp">
 
 
     <LinearLayout
@@ -19,12 +19,10 @@
         android:layout_weight="4"
         android:orientation="horizontal">
 
-
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="4"
+            android:layout_weight="1"
             android:orientation="vertical">
 
             <TextView
@@ -32,20 +30,48 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
-                android:layout_weight="2"
+                android:layout_weight="1"
                 android:gravity="center_vertical"
-                android:text="일정 시간"
+                android:text="일정 제목"
                 android:textColor="#000000"
                 android:textSize="13sp" />
-            <TextView
-                android:id="@+id/calendar_num"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="일정 내용"
-                android:textColor="#666666"
-                android:textSize="10sp"
-                android:layout_marginStart="15dp"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="5"
+                android:layout_marginTop="5dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/calendar_start_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="일정 시작 시간"
+                    android:textColor="#666666"
+                    android:textSize="10sp"
+                    android:layout_marginStart="15dp"/>
+
+                <TextView
+                    android:id="@+id/calendar_between_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="~"
+                    android:textColor="#666666"
+                    android:textSize="10sp"
+                    android:layout_marginStart="3dp"
+                    android:layout_marginEnd="3dp"/>
+
+                <TextView
+                    android:id="@+id/calendar_end_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="일정 종료 시간"
+                    android:textSize="10sp"
+                    android:textColor="#666666" />
+
+            </LinearLayout>
+
         </LinearLayout>
 
         <androidx.cardview.widget.CardView
@@ -57,13 +83,15 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/text">
 
-            <ImageView
+            <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/calendar_image"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:background="@android:color/transparent"
                 android:contentDescription="@string/calendar"
-                android:scaleType="centerCrop" />
+                android:scaleType="centerCrop"
+                tools:listitem="@layout/calendar_member_item"
+                />
         </androidx.cardview.widget.CardView>
 
 
