--- a/android/app/src/main/res/navigation/bottom_bar_nav_graph.xml
+++ b/android/app/src/main/res/navigation/bottom_bar_nav_graph.xml
@@ -72,10 +72,18 @@
         <action
             android:id="@+id/action_loginFragment_to_familyroomFragment"
             app:destination="@id/familyroomFragment" />
+        <action
+            android:id="@+id/action_loginFragment_to_signupFragment"
+            app:destination="@id/signupFragment" />
     </fragment>
     <fragment
         android:id="@+id/familyroomFragment"
         android:name="com.ssafy.zip.android.FamilyroomFragment"
         android:label="fragment_familyroom"
         tools:layout="@layout/fragment_familyroom" />
+    <fragment
+        android:id="@+id/signupFragment"
+        android:name="com.ssafy.zip.android.SignupFragment"
+        android:label="fragment_signup"
+        tools:layout="@layout/fragment_signup" />
 </navigation>
