--- a/android/app/src/main/res/navigation/bottom_bar_nav_graph.xml
+++ b/android/app/src/main/res/navigation/bottom_bar_nav_graph.xml
@@ -70,20 +70,46 @@
             android:id="@+id/action_loginFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
         <action
-            android:id="@+id/action_loginFragment_to_familyroomFragment"
-            app:destination="@id/familyroomFragment" />
-        <action
             android:id="@+id/action_loginFragment_to_signupFragment"
             app:destination="@id/signupFragment" />
+        <action
+            android:id="@+id/action_loginFragment_to_familyEnterFragment"
+            app:destination="@id/familyEnterFragment" />
     </fragment>
-    <fragment
-        android:id="@+id/familyroomFragment"
-        android:name="com.ssafy.zip.android.FamilyroomFragment"
-        android:label="fragment_familyroom"
-        tools:layout="@layout/fragment_familyroom" />
     <fragment
         android:id="@+id/signupFragment"
         android:name="com.ssafy.zip.android.SignupFragment"
         android:label="fragment_signup"
-        tools:layout="@layout/fragment_signup" />
+        tools:layout="@layout/fragment_signup" >
+        <action
+            android:id="@+id/action_signupFragment_to_signUpCompleteFragment"
+            app:destination="@id/signUpCompleteFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/signUpCompleteFragment"
+        android:name="com.ssafy.zip.android.SignUpCompleteFragment"
+        android:label="fragment_sign_up_complete"
+        tools:layout="@layout/fragment_sign_up_complete" >
+        <action
+            android:id="@+id/action_signUpCompleteFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/familyEnterFragment"
+        android:name="com.ssafy.zip.android.FamilyEnterFragment"
+        android:label="fragment_family_enter"
+        tools:layout="@layout/fragment_family_enter" >
+        <action
+            android:id="@+id/action_familyEnterFragment_to_familyCreateFragment"
+            app:destination="@id/familyCreateFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/familyCreateFragment"
+        android:name="com.ssafy.zip.android.FamilyCreateFragment"
+        android:label="fragment_family_create"
+        tools:layout="@layout/fragment_family_create" >
+        <action
+            android:id="@+id/action_familyCreateFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
+    </fragment>
 </navigation>
