--- a/android/app/src/main/res/layout/calendar_item.xml
+++ b/android/app/src/main/res/layout/calendar_item.xml
@@ -20,7 +20,7 @@
         android:orientation="horizontal">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:orientation="vertical">
@@ -36,62 +36,72 @@
                 android:textColor="#000000"
                 android:textSize="13sp" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="5"
-                android:layout_marginTop="5dp"
-                android:orientation="horizontal">
+<!--            <LinearLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:layout_weight="5"-->
+<!--                android:layout_marginTop="5dp"-->
+<!--                android:orientation="horizontal">-->
 
-                <TextView
-                    android:id="@+id/calendar_start_time"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="일정 시작 시간"
-                    android:textColor="#666666"
-                    android:textSize="10sp"
-                    android:layout_marginStart="15dp"/>
+<!--                <TextView-->
+<!--                    android:id="@+id/calendar_start_time"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:text="일정 시작 시간"-->
+<!--                    android:textColor="#666666"-->
+<!--                    android:textSize="10sp"-->
+<!--                    android:layout_marginStart="15dp"/>-->
 
-                <TextView
-                    android:id="@+id/calendar_between_time"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="~"
-                    android:textColor="#666666"
-                    android:textSize="10sp"
-                    android:layout_marginStart="3dp"
-                    android:layout_marginEnd="3dp"/>
+<!--                <TextView-->
+<!--                    android:id="@+id/calendar_between_time"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:text="~"-->
+<!--                    android:textColor="#666666"-->
+<!--                    android:textSize="10sp"-->
+<!--                    android:layout_marginStart="3dp"-->
+<!--                    android:layout_marginEnd="3dp"/>-->
 
-                <TextView
-                    android:id="@+id/calendar_end_time"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="일정 종료 시간"
-                    android:textSize="10sp"
-                    android:textColor="#666666" />
+<!--                <TextView-->
+<!--                    android:id="@+id/calendar_end_time"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:text="일정 종료 시간"-->
+<!--                    android:textSize="10sp"-->
+<!--                    android:textColor="#666666" />-->
 
-            </LinearLayout>
+<!--            </LinearLayout>-->
 
         </LinearLayout>
 
         <androidx.cardview.widget.CardView
+
             android:id="@+id/cardBackgroundView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:cardCornerRadius="50dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
             app:cardElevation="0dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/text">
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/calendar_image"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:background="@android:color/transparent"
-                android:contentDescription="@string/calendar"
-                android:scaleType="centerCrop"
-                tools:listitem="@layout/calendar_member_item"
-                />
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                tools:context=".CalendarFragment"
+                >
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/calendar_image"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:background="@android:color/transparent"
+                    android:contentDescription="@string/calendar"
+                    android:scaleType="centerCrop"
+                    tools:listitem="@layout/calendar_member_item"
+                    />
+            </RelativeLayout>
+
         </androidx.cardview.widget.CardView>
 
 
