--- a/android/app/src/main/res/layout/fragment_calendar.xml
+++ b/android/app/src/main/res/layout/fragment_calendar.xml
@@ -26,14 +26,24 @@
         android:layout_marginTop="25dp"
         android:layout_marginStart="25dp"/>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/calendar_recycler_view"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
         app:layout_constraintTop_toBottomOf="@id/day_text"
-        tools:ignore="MissingConstraints"
-        android:layout_marginTop="25dp"
-        tools:listitem="@layout/calendar_item" />
+        tools:ignore="MissingConstraints">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/calendar_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintTop_toBottomOf="@id/day_text"
+            tools:ignore="MissingConstraints"
+            android:layout_marginTop="25dp"
+            tools:listitem="@layout/calendar_item" />
+
+    </LinearLayout>
+
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/add_calendar_fab"
