--- a/android/app/src/main/res/layout/calendar_item.xml
+++ b/android/app/src/main/res/layout/calendar_item.xml
@@ -10,10 +10,12 @@
     android:layout_marginEnd="10dp"
     app:cardBackgroundColor="@android:color/white"
     app:cardCornerRadius="0dp"
-    app:cardElevation="0dp">
+    app:cardElevation="0dp"
+    >
 
 
     <LinearLayout
+        android:background="@drawable/layout_bottom"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="4"
@@ -75,7 +77,6 @@
         </LinearLayout>
 
         <androidx.cardview.widget.CardView
-
             android:id="@+id/cardBackgroundView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -89,6 +90,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 tools:context=".CalendarFragment"
+
                 >
 
                 <androidx.recyclerview.widget.RecyclerView
