--- a/android/app/src/main/res/layout/calendar_member_item.xml
+++ b/android/app/src/main/res/layout/calendar_member_item.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="30dp"
-    android:layout_gravity="center"
+    android:layout_gravity="center_vertical"
     android:layout_margin="4dp">
 
     <LinearLayout
