--- a/android/app/src/main/res/layout/fragment_calendar.xml
+++ b/android/app/src/main/res/layout/fragment_calendar.xml
@@ -18,20 +18,38 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.048" />
 
+
     <TextView
         android:id="@+id/day_text"
+        android:textSize="15dp"
+        android:textColor="@color/black"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/calendarView"
-        android:layout_marginTop="25dp"
-        android:layout_marginStart="25dp"/>
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginEnd="25dp"
+        />
+    <TextView
+        android:id="@+id/endLayout"
+        android:textColor="@color/black"
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        app:layout_constraintTop_toBottomOf="@id/day_text"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="10dp"
+        android:background="@drawable/layout_bottom"
+        tools:ignore="DuplicateIds" />
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintTop_toBottomOf="@id/day_text"
-        tools:ignore="MissingConstraints">
+        app:layout_constraintTop_toBottomOf="@id/endLayout"
+        tools:ignore="MissingConstraints"
+        >
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/calendar_recycler_view"
@@ -39,7 +57,6 @@
             android:layout_height="match_parent"
             app:layout_constraintTop_toBottomOf="@id/day_text"
             tools:ignore="MissingConstraints"
-            android:layout_marginTop="25dp"
             tools:listitem="@layout/calendar_item" />
 
     </LinearLayout>
