--- a/android/app/src/main/res/layout/calendar_member_item.xml
+++ b/android/app/src/main/res/layout/calendar_member_item.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
 <RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="30dp"
     android:layout_gravity="center_vertical"
@@ -29,4 +28,4 @@
 
 
 </RelativeLayout>
-
+</layout>
