--- a/android/app/src/main/res/layout/board_item.xml
+++ b/android/app/src/main/res/layout/board_item.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/board_layout"
         android:layout_width="match_parent"
-        android:layout_height="410dp"
+        android:layout_height="wrap_content"
         android:paddingTop="8dp"
         android:background="@color/white"
         android:foreground="?android:attr/selectableItemBackground"
@@ -64,16 +64,17 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/imageContainer"
             android:layout_width="match_parent"
-            android:layout_height="260dp"
+            android:layout_height="match_parent"
             app:layout_constraintTop_toBottomOf="@id/profileContanier"
             app:layout_constraintStart_toStartOf="parent"
+
             >
             <ImageView
                 android:id="@+id/boardImage"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:scaleType="fitXY"/>
-
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -91,7 +92,6 @@
                 app:layout_constraintStart_toStartOf="@id/commentContainer"
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_margin="8dp">
-
             </TextView>
             <androidx.constraintlayout.utils.widget.ImageFilterButton
                 android:id="@+id/commentButton"
