--- a/android/app/src/main/res/layout/fragment_record_board_create.xml
+++ b/android/app/src/main/res/layout/fragment_record_board_create.xml
@@ -33,8 +33,9 @@
         app:layout_constraintTop_toBottomOf="@id/profileContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="text"
-        android:hint="게시글을 작성해주세요">
+        android:inputType="textMultiLine"
+        android:hint="게시글을 작성해주세요"
+        >
     </EditText>
 
     <ImageView
