--- a/android/app/src/main/res/layout/fragment_record_letter_create.xml
+++ b/android/app/src/main/res/layout/fragment_record_letter_create.xml
@@ -31,7 +31,7 @@
             android:id="@+id/userNickname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/usernickname1"
+            android:text="유저닉네임"
             android:textSize="15sp"
             android:textColor="@color/black"
             android:textStyle="bold"
