--- a/android/app/src/main/res/layout/dialog_add_calendar.xml
+++ b/android/app/src/main/res/layout/dialog_add_calendar.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 <ScrollView
@@ -10,7 +11,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     android:name=".NoWeightActivity" android:windowSoftInputMode="adjustResize"
 
     tools:ignore="MissingClass">
@@ -32,18 +32,22 @@
                 android:id="@+id/btn_startDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center"
                 android:layout_marginTop="5dp"
-                android:layout_marginEnd="20dp"
-                android:text="시작 날짜"/>
+                android:layout_marginEnd="10dp"
+                android:gravity="center"
+                android:text="시작 날짜" />
+            <ImageView
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_gravity="center"/>
             <TextView
                 android:id="@+id/btn_endDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center"
+                android:layout_marginStart="10dp"
                 android:layout_marginTop="5dp"
-                android:layout_marginStart="20dp"
-                android:text="종료 날짜"/>
+                android:gravity="center"
+                android:text="종료 날짜" />
         </LinearLayout>
 
 
@@ -127,6 +131,7 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/calendar_content_text"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:singleLine="true" />
