--- a/android/app/src/main/res/layout/letter_item.xml
+++ b/android/app/src/main/res/layout/letter_item.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/letter_layout"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
+    android:layout_height="wrap_content"
     android:background="@color/white"
     android:foreground="?android:attr/selectableItemBackground"
     android:orientation="vertical"
@@ -66,8 +66,9 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/letterContentContainer"
         android:layout_width="match_parent"
-        android:layout_height="140dp"
+        android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
+        android:padding="4dp"
         app:layout_constraintTop_toBottomOf="@id/letterInfoContainer">
 
         <TextView
